# bakery_map

./: manage.py  pyproject.toml
bakery_map/: asgi.py  urls.py  wsgi.py
bakery_map/settings/: base.py  dev.py
bakery_map/templates/pipeline/: css.html  inline-js.html  js.html
main/: admin.py  forms.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_bakery_info_alter_bakery_latitude_and_more.py  0003_bakery_added_at_alter_review_pub_date.py
main/static/main/css/: _base.scss  _reset.scss  _variables.scss  main.scss
main/static/main/css/pages/: _bakery_detail.scss  _create_bakery.scss  _index.scss
main/templates/main/: bakery_detail.html  base.html  create_bakery.html  create_review.html  favorite_list.html  index.html
static/main/css/: main.css  main.css.map
